Updated HTML for left side in twitter

--- a/index.html
+++ b/index.html
@@ -19,47 +19,223 @@
     <main>
       <div class="container">
         <div class="left">
-          <nav>
-            <a href="home.html">
-              <img src="/Images/White-twitter-logo.jpg" alt="" class="twitter"
-            /></a>
-            <ul>
-              <div class="tabs">
-                <!-- Add images in nav bar -->
-                <li class="pageso">
-                  <a href="home.html" class="pages">Home</a>
-                </li>
-                <li class="pageso">
-                  <a href="explore.html" class="pages">Explore</a>
-                </li>
-                <li class="pageso">
-                  <a href="notification.html" class="pages">Notification</a>
-                </li>
-                <li class="pageso">
-                  <a href="messages.html" class="pages">Messages</a>
-                </li>
-                <li class="pageso">
-                  <a href="bookmark.html" class="pages">Bookmark</a>
-                </li>
-                <li class="pageso">
-                  <a href="list.html" class="pages">List</a>
-                </li>
-                <li class="pageso">
-                  <a href="profile.html" class="pages">Profile</a>
-                </li>
-                <li class="pageso">
-                  <a href="more.html" class="pages">More</a>
-                </li>
+          <div class="leftall">
+            <nav>
+              <a href="home.html">
+                <img
+                  src="/Images/White-twitter-logo.jpg"
+                  alt=""
+                  class="twitter"
+              /></a>
+              <ul>
+                <div class="tabs">
+                  <!-- Add images in nav bar -->
+                  <li class="pageso">
+                    <div class="lisvg">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="1"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="feather feather-home navsvg"
+                      >
+                        <path
+                          d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
+                          class="homesvg allpsvg"
+                        ></path>
+                        <polyline
+                          points="9 22 9 12 15 12 15 22"
+                          class="homesvg allpsvg"
+                        ></polyline>
+                      </svg>
+                    </div>
+
+                    <a href="home.html" class="pages">Home</a>
+                  </li>
+                  <li class="pageso">
+                    <div class="lisvg">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="1"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="feather feather-hash navsvg"
+                      >
+                        <line x1="4" y1="9" x2="20" y2="9"></line>
+                        <line x1="4" y1="15" x2="20" y2="15"></line>
+                        <line x1="10" y1="3" x2="8" y2="21"></line>
+                        <line x1="16" y1="3" x2="14" y2="21"></line>
+                      </svg>
+                    </div>
+
+                    <a href="explore.html" class="pages">Explore</a>
+                  </li>
+                  <li class="pageso">
+                    <div class="lisvg">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="1"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="feather feather-bell navsvg"
+                      >
+                        <path
+                          d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"
+                          class="notisvg allpsvg"
+                        ></path>
+                        <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+                      </svg>
+                    </div>
+
+                    <a href="notification.html" class="pages">Notification</a>
+                  </li>
+                  <li class="pageso">
+                    <div class="lisvg">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="1"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="feather feather-mail navsvg"
+                      >
+                        <path
+                          d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
+                          class="mainsvg allpsvg"
+                        ></path>
+                        <polyline
+                          points="22,6 12,13 2,6"
+                          class="mainsvg allpsvg"
+                        ></polyline>
+                      </svg>
+                    </div>
+
+                    <a href="messages.html" class="pages">Messages</a>
+                  </li>
+                  <li class="pageso">
+                    <div class="lisvg">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="1"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="feather feather-bookmark navsvg"
+                      >
+                        <path
+                          d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"
+                          class="booksvg allpsvg"
+                        ></path>
+                      </svg>
+                    </div>
+
+                    <a href="bookmark.html" class="pages">Bookmark</a>
+                  </li>
+                  <li class="pageso">
+                    <div class="lisvg">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="1"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="feather feather-list navsvg"
+                      >
+                        <line x1="8" y1="6" x2="21" y2="6"></line>
+                        <line x1="8" y1="12" x2="21" y2="12"></line>
+                        <line x1="8" y1="18" x2="21" y2="18"></line>
+                        <line x1="3" y1="6" x2="3.01" y2="6"></line>
+                        <line x1="3" y1="12" x2="3.01" y2="12"></line>
+                        <line x1="3" y1="18" x2="3.01" y2="18"></line>
+                      </svg>
+                    </div>
+
+                    <a href="list.html" class="pages">List</a>
+                  </li>
+                  <li class="pageso">
+                    <div class="lisvg">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="1"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="feather feather-user navsvg"
+                      >
+                        <path
+                          d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"
+                          class="allpsvg"
+                        ></path>
+                        <circle cx="12" cy="7" r="4" class="allpsvg"></circle>
+                      </svg>
+                    </div>
+
+                    <a href="profile.html" class="pages">Profile</a>
+                  </li>
+                  <li class="pageso">
+                    <div class="lisvg">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="1"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="feather feather-more-horizontal navsvg"
+                      >
+                        <circle cx="12" cy="12" r="1"></circle>
+                        <circle cx="19" cy="12" r="1"></circle>
+                        <circle cx="5" cy="12" r="1"></circle>
+                      </svg>
+                    </div>
+
+                    <a href="more.html" class="pages">More</a>
+                  </li>
+                </div>
+              </ul>
+              <div class="tweet"><a href="tweet.html">Tweet</a></div>
+              <div class="name">
+                <div class="profileimg">
+                  <img src="/Images/profile-pic.jpg" alt="" class="pimg" />
+                </div>
+                <div class="personname">Anmol Verma</div>
               </div>
-            </ul>
-            <div class="tweet"><a href="tweet.html">Tweet</a></div>
-            <div class="name">
-              <div class="profileimg">
-                <img src="/Images/profile-pic.jpg" alt="" class="pimg" />
-              </div>
-              <div class="personname">Anmol Verma</div>
-            </div>
-          </nav>
+            </nav>
+          </div>
         </div>
         <div class="vline"></div>
         <div class="centre">
@@ -107,7 +283,7 @@
             </div>
             <div class="userupimage">
               <img
-                src="https://source.unsplash.com/480x360/?games"
+                src="https://source.unsplash.com/480x360/?videogames"
                 alt="img"
                 class="givenimage"
               />
@@ -212,11 +388,16 @@
             </div>
 
             <div class="usercontent">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil excepturi inventore ullam ipsa qui animi? Quo nesciunt eos earum rem sunt nam doloremque, illo, magnam labore error architecto amet culpa enim aut nulla. Reiciendis eum nihil dignissimos, harum quae pariatur, eveniet temporibus explicabo deleniti a, modi culpa. Autem laboriosam iure aliquam quaerat, harum laudantium obcaecati.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+              excepturi inventore ullam ipsa qui animi? Quo nesciunt eos earum
+              rem sunt nam doloremque, illo, magnam labore error architecto amet
+              culpa enim aut nulla. Reiciendis eum nihil dignissimos, harum quae
+              pariatur, eveniet temporibus explicabo deleniti a, modi culpa.
+              Autem laboriosam iure aliquam quaerat, harum laudantium obcaecati.
             </div>
             <div class="userupimage">
               <img
-                src="https://source.unsplash.com/480x360/?flowers"
+                src="https://source.unsplash.com/480x360/?garden"
                 alt="img"
                 class="givenimage"
               />
@@ -315,13 +496,18 @@
                   class="otherimg"
                 />
               </div>
-              <div class="otherusername space-in-word-of-tweet">Donald Trump</div>
-              <div class="otherusertag space-in-word-of-tweet">@DonaldTrump</div>
+              <div class="otherusername space-in-word-of-tweet">
+                Donald Trump
+              </div>
+              <div class="otherusertag space-in-word-of-tweet">
+                @DonaldTrump
+              </div>
               <div class="uplodetime space-in-word-of-tweet">20m</div>
             </div>
 
             <div class="usercontent">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo in sint vitae ut alias!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo in
+              sint vitae ut alias!
             </div>
             <div class="userupimage">
               <img
