--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             </div>
             <div class="userupimage">
               <img
-                src="https://source.unsplash.com/480x360/?videogames"
+                src="https://source.unsplash.com/480x360/?fruit"
                 alt="img"
                 class="givenimage"
               />
@@ -603,7 +603,32 @@
           <div class="htline"></div>
         </div>
         <div class="vline"></div>
-        <div class="right"></div>
+        <div class="right">
+          <div class="searchtwitter">
+            <div class="search">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="1"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="feather feather-search"
+              >
+                <circle cx="11" cy="11" r="8" class="searchsvg"></circle>
+                <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+              </svg>
+              <input
+                type="text"
+                placeholder="Search Twitter"
+                class="intwitter__search__textbox"
+              />
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <footer></footer>
