--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
               <div class="tweet"><a href="tweet.html">Tweet</a></div>
               <div class="name">
                 <div class="profileimg">
-                  <img src="/Images/profile-pic.jpg" alt="" class="pimg" />
+                  <img src="https://i.pinimg.com/originals/de/bb/9c/debb9c69e89ef2b79baccff94642a034.jpg" alt="" class="pimg" />
                 </div>
                 <div class="personname">Anmol Verma</div>
               </div>
@@ -248,7 +248,7 @@
           </div>
           <div class="writetweet">
             <div class="profileimgcentre">
-              <img src="/Images/profile-pic.jpg" alt="" class="pimgcentre" />
+              <img src="https://i.pinimg.com/originals/de/bb/9c/debb9c69e89ef2b79baccff94642a034.jpg" alt="" class="pimgcentre" />
             </div>
             <div class="wtweet">
               <input
@@ -632,6 +632,5 @@
       </div>
     </main>
     <footer></footer>
-    <!-- SVG's Bellow -->
   </body>
 </html>
