Added CSS in right class

--- a/index.html
+++ b/index.html
@@ -230,7 +230,11 @@
               <div class="tweet"><a href="tweet.html">Tweet</a></div>
               <div class="name">
                 <div class="profileimg">
-                  <img src="https://i.pinimg.com/originals/de/bb/9c/debb9c69e89ef2b79baccff94642a034.jpg" alt="" class="pimg" />
+                  <img
+                    src="https://i.pinimg.com/originals/de/bb/9c/debb9c69e89ef2b79baccff94642a034.jpg"
+                    alt=""
+                    class="pimg"
+                  />
                 </div>
                 <div class="personname">Anmol Verma</div>
               </div>
@@ -248,7 +252,11 @@
           </div>
           <div class="writetweet">
             <div class="profileimgcentre">
-              <img src="https://i.pinimg.com/originals/de/bb/9c/debb9c69e89ef2b79baccff94642a034.jpg" alt="" class="pimgcentre" />
+              <img
+                src="https://i.pinimg.com/originals/de/bb/9c/debb9c69e89ef2b79baccff94642a034.jpg"
+                alt=""
+                class="pimgcentre"
+              />
             </div>
             <div class="wtweet">
               <input
@@ -626,6 +634,34 @@
                 placeholder="Search Twitter"
                 class="intwitter__search__textbox"
               />
+            </div>
+          </div>
+          <div class="whatshappiningcontainer">
+            <div class="whatshappining">
+              <h3 class="trending">What's happining</h3>
+              <div class="hline"></div>
+              <div class="trending trendingbox">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta,
+                est?
+              </div>
+              <div class="hline"></div>
+              <div class="trending trendingbox">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, quisquam commodi?
+              </div>
+              <div class="hline"></div>
+              <div class="trending trendingbox">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam quidem at, quis, optio sint dignissimos dolor soluta ex, modi ipsam recusandae reprehenderit?
+              </div>
+              <div class="hline"></div>
+              <div class="trending trendingbox">
+                Lorem ipsum dolor sit amet.
+              </div>
+              <div class="hline"></div>
+              <div class="trending trendingbox">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum corrupti ea est. Quam, illum molestiae. Delectus esse quas in id numquam quae mollitia aliquid iure reiciendis! At porro ut quaerat.
+              </div>
+              <div class="hline"></div>
+              <div class="showmore trending trendingbox">Show More</div>
             </div>
           </div>
         </div>
