Completed just media quiries left

--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
                   </li>
                 </div>
               </ul>
-              <div class="tweet"><a href="tweet.html">Tweet</a></div>
+              <div class="tweetbox">
+                <div class="tweet"><a href="tweet.html">Tweet</a></div>
+              </div>
               <div class="name">
                 <div class="profileimg">
                   <img
@@ -743,13 +745,13 @@
               <div class="tofollowthree tofollow">
                 <div class="tofollowprofileimg">
                   <img
-                    src="https://paganresearch.io/images/SpaceX.jpg"
-                    alt="SpaceX"
+                    src="https://pbs.twimg.com/profile_images/1111257701835788290/7U7PLuAK.jpg"
+                    alt="Kevin Powell"
                   />
                 </div>
                 <div class="tofollowname">
-                  <div class="nametofollow">SpaceX</div>
-                  <div class="adressnametofollow">@SpaceX</div>
+                  <div class="nametofollow">Kevin Powell</div>
+                  <div class="adressnametofollow">@KevinJPowell</div>
                 </div>
                 <div class="tick">
                   <svg
