Completed just media quiries left

--- a/index.html
+++ b/index.html
@@ -774,9 +774,20 @@
                   <div class="tofollowbutton">Follow</div>
                 </div>
               </div>
-              <div class="seemoretofollow tofollow">
-                See More
-              </div>
+              <div class="seemoretofollow tofollow">See More</div>
+            </div>
+          </div>
+          <div class="copyright">
+            <!-- <div class="hline"></div> -->
+            <div class="termsser">
+              <p>Terms of services</p>
+              <p>Privacy Policies</p>
+              <p>Cookie Policy</p>
+            </div>
+            <div class="addcopyright">
+              <p>Add Info</p>
+              <p>More...</p>
+              <p>&copy;2021 Twitter,Inc.</p>
             </div>
           </div>
         </div>
