Added media quaries to centre container

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                 <img
                   src="/Images/White-twitter-logo.jpg"
                   alt=""
-                  class="twitter"
+                  class="twitter leftallpd"
               /></a>
-              <ul>
+              <ul class="leftallpd">
                 <div class="tabs">
                   <!-- Add images in nav bar -->
-                  <li class="pageso">
+                  <li class="pageso homebar">
                     <div class="lisvg">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -51,12 +51,11 @@
                         ></path>
                         <polyline
                           points="9 22 9 12 15 12 15 22"
-                          class="homesvg allpsvg"
+                          class="allpsvg"
                         ></polyline>
                       </svg>
                     </div>
-
-                    <a href="home.html" class="pages">Home</a>
+                    <div class="hometext pages">Home</div>
                   </li>
                   <li class="pageso">
                     <div class="lisvg">
@@ -228,7 +227,7 @@
                   </li>
                 </div>
               </ul>
-              <div class="tweetbox">
+              <div class="tweetbox leftallpd">
                 <div class="tweet"><a href="tweet.html">Tweet</a></div>
                 <div class="parentmediatweetsvg">
                   <div class="mediatweetsvg">
@@ -261,7 +260,7 @@
                   </div>
                 </div>
               </div>
-              <div class="name">
+              <div class="name leftallpd">
                 <div class="profileimg">
                   <img
                     src="https://i.pinimg.com/originals/de/bb/9c/debb9c69e89ef2b79baccff94642a034.jpg"
@@ -300,6 +299,7 @@
                 placeholder="What's happening?"
               />
             </div>
+            <div class="tweetpost">Tweet</div>
           </div>
           <div class="htline"></div>
           <div class="person2 otheruser">
